# web_view

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ios-build.yml  manual-build-macos.yml  manual-build-windows-PyInst.yml
.idx/: dev.nix  integrations.json
github/workflows/: manual-build-android.yml  manual-build-macos-PyInst.yml  manual-build-windows.yml
src/: foto_zip.py  main.py  translations.py
src/assets/: manifest.json
src/assets/icons/: main.py
src/camera_extension/: camera.html
