[project]
name = "loki"
version = "0.1.0"
description = "Loki is a lightweight desktop app built with Flet, designed for fast interaction, dynamic interfaces, and seamless local data handling."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.27.0"
]

[tool.flet][tool.flet]
product = "Loki"
company = "Loki Technologies"
org = "com.loki.app"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.0"}