[project]
name = "Stream"
version = "0.1.0"
description = "A lightweight tool for interactive data collection."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.27.0",
  "requests"
]

[tool.flet]
product = "Stream"
company = "Loki Technologies"
org = "com.streamloki.app"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.0"}